style - adjusted margins of profile text in index.html to avoid overspill onto left hand side of page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -396,7 +396,9 @@ footer {
     }
     
     #about p {
-        padding: 0 20px;
+        padding: 0 20 20 20px;
+        max-width: 50%;
+        margin-left: 25%;
     }
 
     #services {
